--- a/WelcomePage.html
+++ b/WelcomePage.html
@@ -15,6 +15,7 @@
 <body>
     <h1>Hello World </h1>
     <h1>I just added a new line </h1>
+    <h1>I just made changes to shakirah project </h1>
     <p>This is a basic HTML document with a heading and a paragraph.</p>
     <h2>About Execute Tech Academy</h2>
     <p>Execute Tech Academy is a leading technology training institution that provides hands-on courses in software development, data science, cybersecurity, and more. It aims to equip learners with practical skills to excel in the tech industry.</p>
